# server

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml  semantic-release.yml
orchestrate-core/: Cargo.toml
orchestrate-core/src/: commands.rs  error.rs  evaluator.rs  event.rs  input_binding.rs  lib.rs  orchestrator.rs  playbook.rs  state.rs  template.rs
plugins/orchestrate/: Cargo.toml
plugins/orchestrate/src/: lib.rs
plugins/orchestrate/tests/: shadow_diff.rs
src/: affinity.rs  coherence.rs  command_bus.rs  error.rs  lib.rs  main.rs  metrics.rs  orchestrate_shadow.rs  sanitize.rs  sharding.rs  snowflake.rs  state.rs  system_plugins.rs  tls.rs
src/config/: app.rs  database.rs  mod.rs
src/crypto/: envelope.rs  keymanager.rs  kms_gcp.rs  mod.rs  sealed.rs
src/db/: mod.rs  pool.rs
src/db/models/: catalog.rs  credential.rs  event.rs  keychain.rs
src/db/queries/: catalog.rs  credential.rs  event_chain.rs  event_outbox.rs  keychain.rs  mod.rs  object_store.rs  plugin_module.rs  registry.rs  result_store.rs  secret_audit.rs  subscription_dedup.rs  wallet_rotate.rs
src/engine/: commands.rs  evaluator.rs  mod.rs  orchestrator.rs  state.rs
src/handlers/: auth.rs  auth_verify.rs  catalog.rs  cells.rs  container_callback.rs  credentials.rs  cross_region.rs  ehdb.rs  event_write.rs  events.rs  execute.rs  health.rs  ingress.rs  internal.rs  keychain.rs  mod.rs  objects.rs  orphan_sweep.rs  plugins.rs  registry.rs  replay.rs  result_store.rs  result_tier.rs  runtime.rs  secret_audit.rs  sharding.rs  subscription.rs  wallet_rotate.rs
src/nats/: event_publisher.rs  mod.rs
src/playbook/: mod.rs  parser.rs  types.rs
src/secrets/: aws.rs  aws_sts.rs  azure.rs  azure_oauth.rs  broker.rs  dynamic.rs  gcp.rs  gcp_iam.rs  k8s.rs  mod.rs  registry.rs  residency.rs  resolver.rs  vault.rs
src/services/: catalog.rs  cell_registry.rs  credential.rs  event_stream.rs  execution.rs  internal.rs  keychain.rs  keychain_refresh.rs  mod.rs  object_backend.rs  orch_snapshot.rs  permanent_log_lean.rs  registry.rs  replay.rs  result_store.rs  result_tier_gc.rs  runtime.rs  secret_audit.rs  ui_schema.rs  wallet_rotate.rs
src/template/: jinja.rs  mod.rs
tests/: parity_harness.rs  shard_publish_routing.rs
tests/parity_harness/: README.md  events.json  expected.json  regenerate_expected.py
