# The `system/orchestrate` WASM plug-in (noetl/ai-meta#108, step 2 of #107).
#
# Wraps the pure drive core (`noetl-orchestrate-core`, native + wasm32) behind
# the worker plug-in ABI: input bytes = the bounded event slice + the playbook,
# output bytes = the `OrchestrationResult` (the commands + completion + events).
# A standalone crate — NOT a member of the server workspace; built explicitly:
#   cargo build --release --target wasm32-unknown-unknown
# The compiled `.wasm` is the first non-trivial compiled system playbook; the
# server registers it in the catalog + serves it to workers via the existing
# `HttpPluginSource` (workers never compile it).
[package]
name = "noetl-orchestrate-plugin"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
# `cdylib` for the wasm32 artifact; `rlib` so native tests can call the pure
# `orchestrate()` round-trip (the in-process half of the shadow-diff).
crate-type = ["cdylib", "rlib"]

[dependencies]
noetl-orchestrate-core = { path = "../../orchestrate-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# `OrchestrateStateInput.latest_ts` is a `DateTime<Utc>`; default-features off +
# serde/std keeps it wasm32-safe (no clock/wasmbind), matching the core.
chrono = { version = "0.4", default-features = false, features = ["serde", "std"] }

[dev-dependencies]
# Native-only: the parity tests build the playbook from YAML.
serde_yaml = "0.9"
# The shadow-diff integration test loads the built `.wasm` and runs it through a
# wasmtime harness that mirrors the worker host's `invoke_bytes` ABI byte-for-byte.
# Pinned to the worker's wasmtime major (`repos/worker/Cargo.toml`) so "runs in
# this harness" ⟺ "runs in the worker host".
wasmtime = "27"

[profile.release]
opt-level = "s"
lto = true
strip = true
